A lot of tests and fixes for bugs uncovered.
Change how configuration options are stored. Instead of keeping
one copy of options, keep a "dev" copy and a default copy, then
just fall back to default. Same for i18n.

--- a/test/testpage.css
+++ b/test/testpage.css
@@ -5,5 +5,7 @@
 
 #mocha {
   border: 1px dashed #000;
+  max-height: 400px;
+  overflow: auto;
   padding-bottom: 15px;
 }
